chore: remove unnecessary logging statements